add initial files for backend

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "keywords": [
     "node",
-    "chai"
+    "chai",
+    "javascript"
   ],
   "author": "kunga younthen",
   "license": "ISC",
